--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-		<meta name="description" content="Nicolas Meseguer's website, biography, education, previous experience and published papers."/>
-		<meta name="keywords" content="nicolasmeseguer, NicolasMeseguer, Nicolas Meseguer, nicolas meseguer youtube, nicolas meseguer github, nicolas meseguer murcia, nicolas meseguer cv, nicolas meseguer portfolio"/>
+		<meta name="description" content="Saidinesh's website, biography, education, previous experience and published papers."/>
+		<meta name="keywords" content="nicolasmeseguer, Saidinesh, Saidinesh, Saidinesh youtube, Saidinesh github, Saidinesh murcia, Saidinesh cv, Saidinesh portfolio"/>
 		
-		<meta name="author" content="Nicolas Meseguer" />
+		<meta name="author" content="Saidinesh" />
 		<meta name="copyright" content="Work protected by copyright; no distribution without permission." />
 		
 		<!-- Title + Icon -->
-		<title>Nicolas Meseguer</title>
+		<title>Saidinesh</title>
 		<link rel="icon" type="image/x-icon" href="assets/img/NicolasMeseguer.ico">
 
 		<!-- Improve SEO -->
@@ -74,12 +74,12 @@
 								data-en="Publications">
 						</a>
 						</li>
-						<li class="nav-item">
+						<!-- <li class="nav-item">
 							<a class="nav-link d-none" id="tutorials" href="#" 
 								data-es="Tutoriales" 
 								data-en="Tutorials">
 							</a>
-						</li>
+						</li> -->
 						<li class="nav-item">
 							<a class="nav-link" id="academic" href="#" 
 								data-es="Enseñanza" 
@@ -126,15 +126,15 @@
 		<div class="container" id="main-content">
 			<div class="row content">
 				
-				<!-- Nicolas Meseguer profile and contact info -->
+				<!-- Saidinesh profile and contact info -->
 				<div id="leftPanel" class="col-md-3 language">
 					<div class="row mb-3">
 						<div class="col">
-							<img src="assets/img/NicolasMeseguer.webp" class="rounded me-auto d-block img-fluid profilepicture" alt="Nicolas Meseguer profile picture">
+							<img src="assets/img/NicolasMeseguer.webp" class="rounded me-auto d-block img-fluid profilepicture" alt="Saidinesh profile picture">
 						</div>
 					</div>
 
-					<h3 class="mb-2">Nicolás Meseguer</h3>
+					<h3 class="mb-2">Saidinesh</h3>
 
 					<div class="d-none" id="contadorVisitas"></div>
 
