Update keywords and profile picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 		<meta name="description" content="Saidinesh's website, biography, education, previous experience and published papers."/>
-		<meta name="keywords" content="nicolasmeseguer, Saidinesh, Saidinesh, Saidinesh youtube, Saidinesh github, Saidinesh murcia, Saidinesh cv, Saidinesh portfolio"/>
+		<meta name="keywords" content="Saidinesh, Saidinesh, Saidinesh, Saidinesh youtube, Saidinesh github, Saidinesh murcia, Saidinesh cv, Saidinesh portfolio"/>
 		
 		<meta name="author" content="Saidinesh" />
 		<meta name="copyright" content="Work protected by copyright; no distribution without permission." />
@@ -130,7 +130,7 @@
 				<div id="leftPanel" class="col-md-3 language">
 					<div class="row mb-3">
 						<div class="col">
-							<img src="assets/img/NicolasMeseguer.webp" class="rounded me-auto d-block img-fluid profilepicture" alt="Saidinesh profile picture">
+							<img src="assets/img/saidinesh_pola.jpg" class="rounded me-auto d-block img-fluid profilepicture" alt="Saidinesh profile picture">
 						</div>
 					</div>
 
