--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
 						</div>
 					</div>
 
-					<h3 class="mb-2">Saidinesh</h3>
+					<h3 class="mb-2">Saidinesh </h3>
 
 					<div class="d-none" id="contadorVisitas"></div>
 
 					<p class="mb-4">
 						<span class="t-secondary" data-es="Estudiante de doctorado en Arquitectura de Computadores en la Universidad de Murcia y CTO en " 
-						data-en="Ph.D. Computer Architecture Student at University of Murcia and CTO at "></span> <a href="https://mowatave.com" class="link-dark" target="_blank">Mowatave</a>.
+						data-en="Specialist Programmer at "></span> <a href="https://infosys.com" class="link-dark" target="_blank">Infosys</a>.
 					</p>
 					
 					<div class="row mb-2">
@@ -150,14 +150,14 @@
 
 						<div class="col-10">
 							<span 
-								data-es="Área Metropolitana" 
-								data-en="Greater Murcia Metropolitan Area">
+								data-es="Electronic City" 
+								data-en="Electronic City">
 							</span> 
 							<br/>
-							Murcia, 
+							Bangalore, 
 							<span 
-								data-es="España" 
-								data-en="Spain">
+								data-es="India" 
+								data-en="India">
 							</span>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="mailto:n.mesegueriborra@um.es" class="link-dark">n.mesegueriborra@um.es</a>
+							<a href="mailto:saidines12@gmail.com" class="link-dark">saidines12@gmail.com</a>
 						</div>
 					</div>
 
@@ -188,19 +188,19 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://www.linkedin.com/in/nicolasmeseguer/" class="link-dark" target="_blank">LinkedIn</a>
+							<a href="https://www.linkedin.com/in/saidineshpola/" class="link-dark" target="_blank">LinkedIn</a>
 						</div>
 					</div>
 
-					<div class="row mb-2">
+					<!-- <div class="row mb-2">
 						<div class="col-1">
 							<i class="fa-brands fa-twitter" aria-hidden="true"></i>
 						</div>
 
 						<div class="col-10">
-							<a href="https://twitter.com/NicolasMeseguer" class="link-dark" target="_blank">Twitter</a>
+							<a href="https://twitter.com/saidines12" class="link-dark" target="_blank">Twitter</a>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="row mb-2">
 						<div class="col-1">
@@ -208,7 +208,7 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://github.com/NicolasMeseguer" class="link-dark" target="_blank">GitHub</a>
+							<a href="https://github.com/saidineshpola" class="link-dark" target="_blank">GitHub</a>
 						</div>
 					</div>
 
@@ -218,11 +218,11 @@
 						</div>
 
 						<div class="col-10">
-							<a href="https://gitlab.com/NicolasMeseguer" class="link-dark" target="_blank">GitLab</a>
+							<a href="https://gitlab.com/saidinesh_pola" class="link-dark" target="_blank">GitLab</a>
 						</div>
 					</div>
 
-					<div class="row mb-2">
+					<!-- <div class="row mb-2">
 						<div class="col-1">
 							<i class="fa-solid fa-plus"></i>
 						</div>
@@ -230,7 +230,7 @@
 						<div class="col-10">
 							<a href="https://fseneca.es/tfs/fpi/ficha/8362" class="link-dark" target="_blank"><img class="fseneca" src="/assets/img/fseneca-color.svg" alt="Fundación Séneca"></a>
 						</div>
-					</div>
+					</div> -->
 				</div>
 
 				<!-- About Me -->
@@ -429,10 +429,10 @@
 						<div class="row mt-3 language">
 							<h2 
 								data-es="Máster en Arquitecturas de Altas Prestaciones y Supercomputación"
-								data-en="M.S. in High Performance Architectures and Supercomputing"></h2>
+								data-en="M.tech in Commnication Engineering"></h2>
 							<div class="trnsf-thin"
-								data-es="(Universidad de Murcia, 2021-2022) 9,24 - 60 ECTS"
-								data-en="(University of Murcia, 2021-2022) 9,24 - 60 ECTS">
+								data-es="(IIT Guwahati, 2019-2021) 6,24 - 60 ECTS"
+								data-en="(University of Murcia, 2021-2022) 6,24 - 60 ECTS">
 							</div>
 
 							<p class="mt-1 justify"
