--- a/index.html
+++ b/index.html
@@ -386,13 +386,13 @@
 				<!-- Education -->
 				<div class="col-md-8 offset-md-1 mb-5" id="educationContent">
 					<div class="container">
-						<div class="row mt-2 language">
+						<!-- <div class="row mt-2 language">
 							<h2 
 								data-es="Doctorado en Arquitectura de Computadores"
-								data-en="Ph.D. in Computer Architecture"></h2>
+								data-en="M.tech in Commnication Engineering"></h2>
 							<div class="trnsf-thin" 
 								data-es="(Universidad de Murcia, 2022-2026)" 
-								data-en="(University of Murcia, 2022-2026)"></div>
+								data-en="(IIT Guwahati, 2019-2021)"></div>
 
 							<p class="mt-1 justify"
 								data-es="
@@ -420,11 +420,11 @@
 								</span>
 								<span class="trnsf-italic"
 									data-es="Por determinar (finales~2026)."
-									data-en="TBD (late~2026).">
+									data-en="TBD (late~2021).">
 								</span>
 							</div>
 
-						</div>
+						</div> -->
 
 						<div class="row mt-3 language">
 							<h2 
@@ -437,21 +437,14 @@
 
 							<p class="mt-1 justify"
 								data-es="
-								Diseño de arquitecturas multinúcleo de alto rendimiento, incluyendo la microarquitectura de cada uno de los núcleos de procesamiento, las cachés y la red de interconexión.
-								Comprender los mecanismos a través de los cuales se puede lograr una comunicación eficiente entre los núcleos (el protocolo de coherencia de la caché).
-								Evaluar el impacto de las diferentes técnicas arquitectónicas en el rendimiento y el consumo de energía de las arquitecturas multinúcleo de alto rendimiento.
-								Estándares de programación paralela: paradigmas de memoria compartida (OpenMP) e interfaz de paso de mensajes (MPI) + paradigmas híbridos (como MPI+OpenMP y OpenMP+CUDA).
-								Nociones de programación paralela, algoritmos y bibliotecas matriciales eficientes en sistemas de alto rendimiento (BLAS, Intel MKL, cuBLAS, ScaLAPACK).
-								Administración de sistemas de alto rendimiento (almacenamiento RAID, reglas de cortafuegos, protocolos de red, gestor de módulos, sistema de colas, arranque en red).
+								
 								"
 
 								data-en="
-								Design high-performance multi-core architectures, including the microarchitecture of each of the processing cores, the caches and the interconnection network.
-								Understand the mechanisms through which efficient communication between cores can be achieved (the cache coherence protocol).
-								Assess the impact of different architectural techniques on the performance and power consumption of high-performance multi-core architectures.
-								Parallel programming standards: shared memory paradigms (OpenMP) and message passing interface (MPI) + hybrid paradigms (such as MPI+OpenMP and OpenMP+CUDA).
-								Notions of parallel programming and efficient matrix algorithms and libraries in high-performance systems (BLAS, Intel MKL, cuBLAS, ScaLAPACK).
-								High performance system administration (RAID storage, firewall rules, network protocols, module manager, queuing system, network boot).
+								For my thesis, I addressed the challenges of energy consumption and data reliability in IoT devices during cloud communication.
+								 I proposed a sequence-preserved Interdependent Source-Channel Code (ISCC) to minimize transmitted bit overhead while ensuring data order. 
+								 The results demonstrated up to a 27% reduction in overhead compared to separate source-channel coding (SSCC), making ISCC a promising solution for efficient IoT data transmission.
+
 								">
 								
 							</p>
@@ -462,9 +455,9 @@
 									data-en="Thesis:">
 								</span>
 								<span class="trnsf-italic">
-									<a href="./assets/documents/dissertations/NICOLASMESEGUER_CPU-PCGCN_efficient_processing_of_graph_convolutional_networks_on_CPU_architectures.pdf" class="link-dark" target="_blank"
-									data-es="CPU-PCGCN, procesamiento eficiente de redes convolucionales grafos en arquitecturas CPU."
-									data-en="CPU-PCGCN, efficient processing of graph convolutional networks on CPU architectures.">
+									<a href="https://ieeexplore.ieee.org/document/10183432" class="link-dark" target="_blank"
+									data-es=""
+									data-en="Implementation of a new order preserving Lossless Data Compression scheme to reduce overhead in a Novel Interdependent Joint Source and Channel Coding in wireless sensor networks">
 								</a>
 								</span>
 							</div>
@@ -473,7 +466,7 @@
 									data-es="[encuentra el repositorio"
 									data-en="[find the repository">
 								</span>
-								<a href="https://github.com/NicolasMeseguer/pcgcn" class="link-dark" target="_blank" 
+								<a href="https://github.com/saidineshpola/pcgcn" class="link-dark" target="_blank" 
 									data-es="aquí]"
 									data-en="here]">
 								</a>
@@ -591,20 +584,20 @@
 				<div class="col-md-8 offset-md-1 mb-5" id="publicationsContent">
 					<div class="container">
 						<div class="row mt-2">
-							<h2 class="pub-year-h2">2023</h2>
+							<h2 class="pub-year-h2">2022</h2>
 
 							<div class="pub-block">
-								<div class="lucida-console h5">CPU-PCGCN: Efficient Processing of Convolutional Graph Networks on CPU Architectures</div>
-								<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer-Iborra</span>, José L. Abellán, Manuel E. Acacio</div>
-								<div class="pub-congress">19th International Summer School on Advanced Computer Architecture and Compilation for High-performance Embedded Systems, Fiuggi (Italy), July 2023.</div>
+								<div class="lucida-console h5"></div>
+								<div class="pub-authors mt-1"><span class="pub-author">saidineshpola</span>, José L. Abellán, Manuel E. Acacio</div>
+								<div class="pub-congress">  IEEE Guwahati Subsection Conference (GCON)</div>
 								<div class="mt-1">
-									<span> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2023CPU-PCGCN-Poster.pdf" target="_blank" class="link-dark ">Poster</a> </span>
-									<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a href="/assets/documents/publications/2023CPU-PCGCN-Abstract.pdf" target="_blank" class="link-dark ">Abstract</a> </span>
+									<span> <i class="far fa-file-pdf"></i> <a href="https://ieeexplore.ieee.org/document/10183432" target="_blank" class="link-dark ">Poster</a> </span>
+									<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a href="https://ieeexplore.ieee.org/document/10183432" target="_blank" class="link-dark ">Abstract</a> </span>
 								</div>
 							</div>
 						</div>
 
-						<div class="row mt-3">
+						<!-- <div class="row mt-3">
 							<h2 class="pub-year-h2">2022</h2>
 
 							<div class="pub-block">
@@ -627,7 +620,7 @@
 	isbn = {978-84-1302-185-0}
 }</div>
 							</div>
-						</div>
+						</div> -->
 
 						<div class="row mt-3">
 							<h2 class="pub-year-h2">2021</h2>
