--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 					<div class="row mt-3 language">
 						<h2 data-es="IIT Guwahati" data-en="M.tech in Commnication Engineering"></h2>
 						<div class="trnsf-thin" data-es="(IIT Guwahati, 2019-2021) 6,24 - 60 ECTS"
-							data-en="(University of Murcia, 2021-2022) 6,24 - 60 ECTS">
+							data-en="(IIT Guwahati, 2019-2021)">
 						</div>
 
 						<p class="mt-1 justify" data-es="
@@ -508,7 +508,7 @@
 						</div> -->
 
 					<div class="row mt-3 language">
-						<h2 data-es="" data-en=" B.Tech. in Electronic & Commnication Engineering">
+						<h2 data-es="" data-en=" B.Tech. in Electronics & Commnication Engineering">
 						</h2>
 						<div class="trnsf-thin" data-es="" data-en="(NIT Raipur, 2014-2018) ">
 						</div>
