--- a/index.html
+++ b/index.html
@@ -256,6 +256,11 @@
 								- <span data-es="Dic, 2022" data-en="2024"></span>
 							</li>
 							<li class="abme-honors-bullet mt-2">
+								Won 2nd runner up in <strong>CVPR2024’s</strong> Vision Language Modeling fewshot
+								anomaly detection using few-Some Siamese
+								Networks with CLIP and DINO. .
+							</li>
+							<li class="abme-honors-bullet mt-2">
 								Won 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
 							</li>
 							<li class="abme-honors-bullet mt-2">
@@ -569,34 +574,23 @@
 						<h2 class="pub-year-h2">2024</h2>
 
 						<div class="pub-block">
-							<div class="lucida-console h5">Evaluación de un Sistema de Recomendación en un Acelerador
-								Híbrido
+							<div class="lucida-console h5">Results of the NeurIPS 2023 Neural MMO
+								Competition on Multi-task Reinforcement Learning*
 							</div>
-							<div class="pub-authors mt-1"><span class="pub-author">Nicolás Meseguer-Iborra</span>,
-								Francisco
-								Muñoz-Martínez, Manuel E. Acacio, José L. Abellán</div>
-							<div class="pub-congress">XXXI Jornadas de Paralelismo, Málaga (Spain), September 2021.
+							<div class="pub-authors mt-1">Joseph Suárez, Kyoung Whan Cho, Yunkun Li3, Yao Fen, <span
+									class="pub-author">Saidinesh Pola</span>
+							</div>
+							<div class="pub-congress">NMMO NeurIPS D&B 2024.
 							</div>
 							<div class="mt-1">
-								<span> <i class="far fa-file-pdf"></i> <a
-										href="/assets/documents/publications/2021DLRM.pdf" target="_blank"
+								<span> <i class="far fa-file-pdf"></i> <a href="" target="_blank"
 										class="link-dark">PDF</a> </span>
 								<span class="pub-force-margin-left"> <i class="fas fa-quote-left"></i> <a href="#"
 										id="citation" class="link-dark">BibTeX</a> </span>
 							</div>
 							<div class="d-none">
-								@article{2021dlrm,
-								author = {Meseguer-Iborra, Nicolas and Muñoz-Martínez, Francisco and Acacio, Manuel E.
-								and
-								Abellán, José L.},
-								year = {2021},
-								month = {June},
-								title = {Evaluación de un Sistema de Recomendación en un Acelerador Híbrido},
-								journal = {Avances en Arquitectura y Tecnología de Computadores},
-								volume = {31},
-								pages = {107--115},
-								isbn = {978-84-09-32487-3}
-								}</div>
+
+							</div>
 						</div>
 					</div>
 					<div class="row mt-3">
@@ -608,9 +602,9 @@
 							</div>
 							<div class="pub-congress"> IEEE Guwahati Subsection Conference (GCON)</div>
 							<div class="mt-1">
-								<span> <i class="far fa-file-pdf"></i> <a
+								<!-- <span> <i class="far fa-file-pdf"></i> <a
 										href="https://ieeexplore.ieee.org/document/10183432" target="_blank"
-										class="link-dark ">Poster</a> </span>
+										class="link-dark ">Poster</a> </span> -->
 								<span class="pub-force-margin-left"> <i class="far fa-file-pdf"></i> <a
 										href="https://ieeexplore.ieee.org/document/10183432" target="_blank"
 										class="link-dark ">Abstract</a> </span>
