--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 				<div class="container">
 					<div class="row language">
 						<p class="mt-2 justify"
-							data-en="Hello! I'm SaiDinesh Pola, a passionate technologist hailing from Bobbili, Andhra Pradesh. I completed my B.Tech from NIT Raipur and pursued my M.Tech in Communication Engineering from IIT Guwahati. My journey in the tech world is fueled by my curiosity and the joy I find in creating and learning new things.">
+							data-en="Hello! I'm SaiDinesh Pola, a passionate technologist hailing from Bangalore. I completed my B.Tech from NIT Raipur and pursued my M.Tech in Communication Engineering from IIT Guwahati. My journey in the tech world is fueled by my curiosity and the joy I find in creating and learning new things. I like connecting to new people and solving problems through hackathons.">
 						</p>
 
 						<h4 id="researchinterestsH4" class="mt-2" data-en="Research Interests">
