--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
 
 								- <span data-es="Dic, 2022" data-en="2024"></span>
 							</li>
-							<li class="abme-honors-bullet mt-2">
+<!-- 							<li class="abme-honors-bullet mt-2">
 								Won 2nd runner up in <strong>CVPR2024’s</strong> Vision Language Modeling fewshot
 								anomaly detection using few-Some Siamese
 								Networks with CLIP and DINO. .
-							</li>
+							</li> -->
 							<li class="abme-honors-bullet mt-2">
 								Won 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
 							</li>
