Update index.html with links

--- a/index.html
+++ b/index.html
@@ -261,8 +261,12 @@
 								Networks with CLIP and DINO. .
 							</li> -->
 							<li class="abme-honors-bullet mt-2">
-								Won 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
-							</li>
+    Won 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
+    <a href="https://drive.google.com/file/d/1HAOdsISxij_X3LI3wHf8tdl91b0Ojtmi/view" target="_blank" rel="noopener noreferrer" class="ml-2">
+        <img src="assets/imgs/drive-icon.png" alt="Google Drive Icon" style="width: 20px; height: 20px; vertical-align: middle;">
+        View Certificate
+    </a>
+</li>
 							<li class="abme-honors-bullet mt-2">
 								Finished 2nd in the NVIDIA’s object tracking and detection competition on grocery
 								products.
@@ -275,9 +279,10 @@
 								work at <strong> the German Conference on Pattern Recognition (GCPR23)</strong>.
 							</li>
 							<li class="abme-honors-bullet mt-2">
-								Secured 3rd place in private leader board of SONY’s Commonsense Peacock Persona-based
-								Dialogue Generation (Role Play) using LLms.
-							</li>
+    Secured 3rd place in private leader board of SONY's Commonsense Peacock Persona-based
+    Dialogue Generation (Role Play) using LLMs.
+    <img src="assets/img/SONY-LB.PNG" alt="Sony Leaderboard" class="mt-2" style="max-width: 100%; height: auto;">
+</li>
 						</ul>
 						<!--
 								<li class="abme-honors-bullet mt-2">
