--- a/index.html
+++ b/index.html
@@ -269,19 +269,27 @@
 </li>
 							<li class="abme-honors-bullet mt-2">
 								Finished 2nd in the NVIDIA’s object tracking and detection competition on grocery
-								products.
+								products.[<a href="https://drive.google.com/file/d/14ssml94s1IDUrBRQTtSYvNgFDJl1EBT0/view?usp=sharing" target="_blank">
+        Link
+    </a>]
 							</li>
 							<li class="abme-honors-bullet mt-2">
-								Won 3rd place in Infosys’s RAI summit’s security hackathon on NN attacks and defenses.
+								Won 3rd place in Infosys’s RAI summit’s security hackathon on NN attacks and defenses.[<a href="https://drive.google.com/file/d/1PbpOQ8DX2pAyvKVRcel-Taj5i2ITsYyw/view?usp=drive_link" target="_blank">
+        Link
+    </a>]
 							</li>
 							<li class="abme-honors-bullet mt-2">
 								Won 3rd place in AMAZON’s SUADD23 Mono Depth Estimation on drone images and presented my
 								work at <strong> the German Conference on Pattern Recognition (GCPR23)</strong>.
+								[<a href="https://www.aicrowd.com/challenges/scene-understanding-for-autonomous-drone-delivery-suadd-23/problems/mono-depth-perception/leaderboards" class="link-dark" target="_blank">Link</a>]
 							</li>
 							<li class="abme-honors-bullet mt-2">
     Secured 3rd place in private leader board of SONY's Commonsense Peacock Persona-based
     Dialogue Generation (Role Play) using LLMs.
-    <img src="assets/img/SONY-LB.PNG" alt="Sony Leaderboard" class="mt-2" style="max-width: 100%; height: auto;">
+    [<a href="assets/img/SONY-LB.PNG" target="_blank">
+        Link
+    </a>]
+</li>
 </li>
 						</ul>
 						<!--
