--- a/index.html
+++ b/index.html
@@ -262,10 +262,9 @@
 							</li> -->
 							<li class="abme-honors-bullet mt-2">
     Won 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
-    <a href="https://drive.google.com/file/d/1HAOdsISxij_X3LI3wHf8tdl91b0Ojtmi/view" target="_blank" rel="noopener noreferrer" class="ml-2">
-        <img src="assets/imgs/drive-icon.png" alt="Google Drive Icon" style="width: 20px; height: 20px; vertical-align: middle;">
-        View Certificate
-    </a>
+    [<a href="https://drive.google.com/file/d/1HAOdsISxij_X3LI3wHf8tdl91b0Ojtmi/view" target="_blank" rel="noopener noreferrer" class="ml-2">
+       Link
+    </a>]
 </li>
 							<li class="abme-honors-bullet mt-2">
 								Finished 2nd in the NVIDIA’s object tracking and detection competition on grocery
