--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</div>
 
 					<div class="col-10">
-						<a href="assets/documents/SD_overleaf_Resume__In.pdf" class="link-dark" target="_blank"
+						<a href="assets/documents/SD_overleaf_Resume.pdf" class="link-dark" target="_blank"
 							data-es="" data-en="CV [Updated 05/2024]"></a>
 					</div>
 				</div>
@@ -248,13 +248,13 @@
 
 						<ul class="mt-1">
 
-							<li class="abme-honors-bullet">
+<!-- 							<li class="abme-honors-bullet">
 								<strong>Research Fellowship</strong>, <span data-es=""
 									data-en="research contract with AIcrowd"></span>
 								[<a href="." class="link-dark" target="_blank">1</a>]
 
 								- <span data-es="Dic, 2022" data-en="2024"></span>
-							</li>
+							</li> -->
 <!-- 							<li class="abme-honors-bullet mt-2">
 								Won 2nd runner up in <strong>CVPR2024’s</strong> Vision Language Modeling fewshot
 								anomaly detection using few-Some Siamese
