Update index.html with recent bio

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 						</h4>
 
 						<p class="mt-1"
-							data-en="I started with a Machine Learning course and gradually delved into Deep Learning, focusing mainly on Computer Vision and NLP. Along the way, my interest in Gaming and Mathematics led me to discover Reinforcement Learning. I have been using various tools and frameworks such as PyTorch and TensorFlow for DL. This year I'm focussing on VLM and RAG applications.">
+							data-en="I started with a Machine Learning course and gradually delved into Deep Learning, focusing mainly on Computer Vision and NLP. Along the way, my interest in gaming and mathematics led me to discover Reinforcement Learning which i want to pursue in future for proffesional career. I have been using various tools and frameworks such as PyTorch and TensorFlow for DL. I started my journey with computer vision and currently with NLP domain for my company. I fould Mechanistaic Interpretability recently and I'm figuringout a plan to contribute towards better usecase.">
 						</p>
 
 						<h4 id="honors-and-awards" class="mt-2" data-es="Premios y Distinciones"
@@ -261,7 +261,7 @@
 								Networks with CLIP and DINO. .
 							</li> -->
 							<li class="abme-honors-bullet mt-2">
-    Won 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
+    Won🥇 3rd place in NMMO reinforcement learning track for <strong>NeurIPS2024</strong>.
     [<a href="https://drive.google.com/file/d/1HAOdsISxij_X3LI3wHf8tdl91b0Ojtmi/view" target="_blank" rel="noopener noreferrer" class="ml-2">
        Link
     </a>]
