--- a/index.html
+++ b/index.html
@@ -227,21 +227,43 @@
 						</div>
 					</div> -->
 			</div>
+			<!-- Blog Section -->
+<h4 id="blogH4" class="mt-4" data-en="Blogs">
+</h4>
+
+<ul class="list-disc list-inside mt-1 text-blue-600">
+	<li>
+    <a href="https://medium.com/@saidines12/agentic-invoice-extractor-using-langgraph-081eb163fa8e" target="_blank" rel="noopener noreferrer">
+      Multi Agent Invoice Extractor 
+    </a>
+  </li>
+  <li>
+    <a href="https://www.hackster.io/r-bot/enhancing-local-business-intelligence-beyond-google-maps-46939f" target="_blank" rel="noopener noreferrer">
+      Enhancing Local Business Intelligence Beyond Google Maps – Hackster.io
+    </a>
+  </li>
+  <li>
+    <a href="https://medium.com/@saidines12/lets-reproduce-deepseek-r1-94474acbd073" target="_blank" rel="noopener noreferrer">
+      Let’s Reproduce DeepSeek R1 – Medium
+    </a>
+  </li>
+</ul>
 
 			<!-- About Me -->
 			<div class="col-md-8 offset-md-1 mb-5 active" id="aboutmeContent">
 				<div class="container">
 					<div class="row language">
 						<p class="mt-2 justify"
-							data-en="Hello! I'm SaiDinesh Pola, a passionate technologist hailing from Bangalore. I completed my B.Tech from NIT Raipur and pursued my M.Tech in Communication Engineering from IIT Guwahati. My journey in the tech world is fueled by my curiosity and the joy I find in creating and learning new things. I like connecting to new people and solving problems through hackathons.">
+						data-en="Hello! I'm SaiDinesh Pola, a passionate technologist based in Bangalore. I earned my B.Tech from NIT Raipur and completed my M.Tech in Communication Engineering from IIT Guwahati. My journey in tech is fueled by curiosity and the joy of building and learning. I love meeting new people and tackling real-world problems, often through hackathons.">
 						</p>
 
-						<h4 id="researchinterestsH4" class="mt-2" data-en="Research Interests">
+						<h4 id="researchinterestsH4" class="mt-2" data-en="Work Interests">
 						</h4>
 
 						<p class="mt-1"
-							data-en="I started with a Machine Learning course and gradually delved into Deep Learning, focusing mainly on Computer Vision and NLP. Along the way, my interest in gaming and mathematics led me to discover Reinforcement Learning which i want to pursue in future for proffesional career. I have been using various tools and frameworks such as PyTorch and TensorFlow for DL. I started my journey with computer vision and currently with NLP domain for my company. I fould Mechanistaic Interpretability recently and I'm figuringout a plan to contribute towards better usecase.">
+						data-en="I began my journey in Machine Learning and gradually transitioned into Deep Learning, focusing initially on Computer Vision and later moving into Natural Language Processing. My background in gaming and mathematics sparked an interest in Reinforcement Learning, which I aim to pursue further in my professional career. I’ve worked with various tools such as PyTorch and TensorFlow, and I'm currently diving deep into NLP with my company's projects. Recently, I developed a strong interest in mechanistic interpretability for LLMs and am exploring ways to contribute meaningfully to this field. My project work includes Retrieval-Augmented Generation (RAG), multi-agent systems (MCP), LLM fine-tuning, and evaluation of LLMs.">
 						</p>
+
 
 						<h4 id="honors-and-awards" class="mt-2" data-es="Premios y Distinciones"
 							data-en="Honors and Awards"></h4>
